<resources>
    <string name="app_name">Meta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="signin">Signin</string>
    <string name="mobileno">MobileNumber</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="donthaveaccount">Don\'t Have Account</string>
    <string name="signup">SIgnUp</string>
    <string name="add_profile_picture">Add ProfilePicture</string>
    <string name="name">Enter Name Here</string>
    <string name="email">Enter Email Here</string>
    <string name="enmobileno">Enter Mobile Number</string>
    <string name="enteryourpassowrd">Enter Your Password</string>
    <string name="signupnow">SignUp</string>
    <string name="alreadyregistered">Are you Already Registered</string>
    <string name="siginin">Signin</string>
    <string name="login">Login</string>
    <string name="enterdate">Enter Date Of Birth</string>
    <string name="street">Street</string>
    <string name="colonyandarea">Colony/Area</string>
    <string name="postalcode">PostalCode</string>
    <string name="state">State</string>
    <string name="carbrand">CardBrand</string>
    <string name="carmodel">CardModel</string>
    <string name="color">Color</string>
    <string name="carregistrationnuber">Car Registration Number</string>
    <string name="fueltype">FuelType</string>
    <string name="dateofregistration">Date Of Registration</string>
    <string name="driverregistration">Driver Registration</string>
    <string name="vehile_regitration">Vechile Registration</string>
    <string name="next">Next</string>
    <string name="verifymobile">Verify Mobile</string>
    <string name="enterotpsent">Enter Otp Sent To</string>
    <string name="verifyotp">VerifyOtp</string>
    <string name="resendotp">Resend Otp in</string>
    <string name="time">timer</string>
    <string name="setpin">Set Pin</string>
    <string name="setyour">Set Your Four Digit Pin</string>
</resources>
